# PEAC

./: CMakeLists.txt  README.md  run.sh
config/: plane_fitter_config.txt
cpp/: plane_fitter.cpp  plane_fitter_kinect2.cpp  plane_fitter_pcd.cpp  plane_fitter_png.cpp
include/: AHCParamSet.hpp  AHCPlaneFitter.hpp  AHCPlaneSeg.hpp  AHCTypes.hpp  eig33sym.hpp
